profilelist1exp/unpackaged/objects/Octane_Segment_Quantity_Mapping_APJ__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Segment and Quantity Mapping for APJ</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit_Name_APJ__c</fullName>
        <label>Segment Business Unit Name APJ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Name_APJ__c</fullName>
        <label>Segment Name APJ</label>
        <type>TextArea</type>
    </fields>
    <label>Octane_Segment_Quantity_Mapping_APJ</label>
</CustomObject>